Refactored into different directories. Added feature to NVS

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB_RECURSE SRC_FILES "src/*.c")
 
 idf_component_register(SRCS ${SRC_FILES}
-        INCLUDE_DIRS "include/foundation"
+        INCLUDE_DIRS "include/boiler_plate"
         EMBED_FILES "ca_cert.pem")
