--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB_RECURSE SRC_FILES "src/*.c")
 
 idf_component_register(SRCS ${SRC_FILES}
-        INCLUDE_DIRS "include/boiler_plate"
+        INCLUDE_DIRS "include"
         EMBED_FILES "certs/ca_cert.pem")
 
 set(COMPONENT_REQUIRES "spiffs")
